feature: add method removePeerFromRoom
